css/main.css
body {
    font-family: 'Montserrat', sans-serif;
}
h1, h2, h3, h4, h5, h6 {
    font-family: 'Montserrat', sans-serif;
    font-weight: 700;
    color: #252a30;
}
#fullscreen-hero {
    height: 100vh;
    position: relative;
    text-align: center;
    width: 100%;
    min-height: 350px;
    background-color: #252a30;
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
}
@media only screen and (max-width: 800px) {
    #fullscreen-hero {
        min-height: 700px;
    }
}

#fullscreen-hero::before,
#fullscreen-hero::after {
    content: '';
    position: absolute;
    bottom: 0;
    width: 100%;
}
.home-hero {
    background-image: url(../img/code.jpg);
}
.home-hero::before {
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    pointer-events: none;
    background-image: -webkit-gradient(linear, left top, right top, from(rgba(49,61,65,0.6)), to(rgba(49,61,65,0.6)));
    background-image: linear-gradient(90deg, rgba(49,61,65,0.6), rgba(49,61,65,0.6));
}
.hero-container {
    padding: 0 40px;
    display: table;
    margin-left: 15%;
    margin-right: 15%;
    height: 100%;
    width: 70%;
}
.hero-content {
    display: table-cell;
    position: relative;
    z-index: 10;
    text-align: center;
    vertical-align: middle;
}
.hero-content h1 {
    color: #fff;
    margin-bottom: 0;
    font-size: 4.5rem;
}
@media only screen and (max-width: 800px) {
    .hero-content h1 {
        font-size: 2rem;
    }
}
#landing_text {
color: #fff;
}
.btn:link,
.btn:visited {
    font-family: 'Montserrat', sans-serif;
    display: inline-block;
    padding: 25px 40px;
    font-weight: 300;
    text-decoration: none;
    border-radius: 200px;
    color: #fff;
    transition: background-color 0.3s, border 0.3s, color 0.3s;
}
@media only screen and (max-width: 800px) {
    .btn:link,
    .btn:visited {
        padding: 25px 40px;
        font-weight: 300;
        border-radius: 100px;
        font-size: .75rem;
    }
}

.btn-full:link,
.btn-full:visited {
    background-color: #e67e22;
    border: 1px solid #e67e22;
    margin-right: 15px;
}

.btn-ghost:link,
.btn-ghost:visited {
    border: 1px solid #e67e22;
    color: #e67e22;
}

.btn:hover,
.btn:active {
    background-color: #cf6d17;
}

.btn-full:hover,
.btn-full:active {
    border: 1px solid #cf6d17;
}

.btn-ghost:hover,
.btn-ghost:active {
    border: 1px solid #cf6d17;
    color: #fff;
}
.learn-more {
    color: white;
    bottom: 2.5%;
    display: inline-block;
    font-size: 1.3rem;
    left: 50%;
    padding: 20px;
    position: absolute;
    white-space: nowrap;
    z-index: 2;
    text-decoration: none;
    -webkit-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
}
.learn-more h4 {
    font-family: 'Montserrat', sans-serif;
    color: white;
}
@media only screen and (max-width: 320px) {
    .learn-more h4 {
        font-size: 1rem;
    }
}
.contact-btn {
    padding-top: 60px;
}
@media only screen and (max-width: 414px) {
    .contact-btn {
        padding-top: 35px;
    }
}
@media only screen and (max-width: 414px) {
    .contact-btn {
        padding-bottom: 40px;
    }
}
.promo-text {
    color: #7fffd4;
}

#about {
    width: 100%;
    background-color: #fff;
    padding-bottom: 40px;
}

.about-container {
    width: 70%;
}

.about-container h3 {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    padding-top: 50px;
    font-size: 3.5rem;
    font-weight: 900;
}
.about-container p {
    color: #454545;
    font-weight: 200;
    font-size: 1.5rem;
}
.expertise-row p {
    font-size: 1.2rem;
}
.expertise-row {
    padding-top: 35px;
}
.expertise-row h4 {
    padding-top: 15px;
    padding-bottom: 25px;
    font-weight: 800;
    font-size: 2.5rem;
}
.about-container .col {
    text-align: center;
}

.about-container i {
    font-size: 3.75rem;
    color: #FED766;
    padding-bottom: 25px;
}
#projects {
    background-color: #eee;
    width: 100%;
    padding-bottom: 50px;
}
#projects i {
    color: #FED766;
}
#projects h3 {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    padding-top: 50px;
    font-size: 3.5rem;
    font-weight: 900;
    padding-bottom: 70px;
}
#projects h4 {
    padding-top: 15px;
    font-weight: 800;
    font-size: 2.5rem;
}
#projects h6 {
    padding-bottom: 25px;
}
#projects p {
    color: #454545;
    font-weight: 200;
    font-size: 1.0rem;
    padding-bottom: 35px;
}
.website img {
    border-radius: 10px;
}
.website {
    padding-bottom: 50px;
}
@media only screen and (max-width: 500px) {
    .website img {
        height: auto;
        width: auto;
        max-width: 300px;
        max-height: 300px;
    }
}
@media only screen and (max-width: 800px) {
    .website img {
        padding-top: 20px;
    }
}
.testemonial {
    font-family: 'Montserrat', sans-serif;
    font-style: italic;
    text-align: center;
}
.person {
    text-align: center;
    color: #454545;
}
.person img {
    border-radius: 50%;
    width: 50px;
    height: auto;
}
#cv img{
    border-radius: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 35px;
}
#cv h3 {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    padding-top: 50px;
    padding-bottom: 40px;
    font-size: 3.5rem;
    font-weight: 900;
}
#cv p {
    text-align: center;
    font-size: 1.2rem;
    color: #454545;
    font-weight: 200;
}
.cv-link {
    text-align: center;
    padding-bottom: 30px;
    padding-top: 30px;
}
footer {
    padding: 45px 0 35px;
    background-color: #252a30;
    color: #fff;
    text-align: center;
}
footer p.made-by-me {
    margin: 10px 0;
    color: rgba(255,255,255,0.4);
    font-size: 0.6rem;
}

footer .social-links a {
    display: inline-block;
    color: rgba(255,255,255,0.6);
    text-decoration: none;
    margin: 0 4px;
    height: 36px;
    width: 36px;
    font-size: 1.6rem;
    line-height: 2.3;
    transition: color 0.6s;
}
footer .social-links a:hover {
    color: #FED766;
}

